--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         </div>
         <p>SIGA O MEU PERFIL NO INSTAGRAM</p>
         </div>
+        <div class="adress-contact">
         <div class="santos">
         <p>AV.SANTOS DUMONT, 1510-SALA 409</p>
         </div>
@@ -170,6 +171,7 @@
         </div>
         <div class="aldeota">
         <p>ALDEOTA-FORTALEZA/CE</p>
+        </div>
         </div>
         </div>
         <div class="clinic-images">
