--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                rel="noopener noreferrer">
         <img class="map" src="Map.png" alt="Mapa">
         </a>
-        <p>Gastropedagogia e Endoscopia Digestiva</p>
+        <p>Gastropediatria e Endoscopia Digestiva</p>
         <div class="adress-2">
         <p>RQE 10121/14075/ CREMEC 14396</p>
         </div>
