--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <img src="Logo.png" alt="Logo">
         </div>
         <div class="nav-links">
-                <a href=".hero">INÍCIO</a>
-                <a href=".specialty">DOUTORA</a>
-                <a href=".services">SERVIÇOS</a>
-                <a href=".exams">EXAMES</a>
-                <a href=".blog">BLOG</a>
-                <a href=".contact">CONTATO</a>
+                <a href="#hero">INÍCIO</a>
+                <a href="#specialty">QUEM EU SOU</a>
+                <a href="#services">SERVIÇOS</a>
+                <a href="#exams">EXAMES</a>
+                <a href="#blog">BLOG</a>
+                <a href="#contact">CONTATO</a>
         </div>
         <div class="icons">
         <a href="https://www.instagram.com/lidianegastropediatra?igsh=MTR4ZzhtNm8xN2NoYQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
@@ -32,7 +32,7 @@
         </a>
         </div>
     </section>
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="main-image">
         <img src="Main.png" alt="Dra Lidiane">
         </div>
@@ -55,7 +55,7 @@
             <li>Como uma boa taurina, amo comer e dormir;</li>
         </ul>
     </section>
-    <section class="specialty">
+    <section class="specialty" id="specialty">
         <div class="image">
         <img class="second" src="Second.png" alt="Dra Lidiane">
         </div>
@@ -69,6 +69,7 @@
             <li>Título de especialista em Pediatria, Gastroenterologia Pediátrica e Endoscopia Digestiva;</li>
             <li>Mestre e doutoranda em Saúde da Criança e do Adolescente pela UNICAMP;</li>
             <li>Médica voluntária com missões realizadas na Amazônia, Xingu e Mato Grosso, (Xavantes) com atendimento médico pediátrico a comunidades indígenas;</li>
+            <li>Professora de Medicina na Unichristus e Universidade Federal do Ceará (UFC);</li>
         </ul>
         </div>
     </section>
@@ -87,7 +88,7 @@
         </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <h2>CONSULTAS</h2>
         <div class="lists">
         <ul>
@@ -106,7 +107,7 @@
         <img class="child-1" src="third.png" alt="Criança">
         <img class="child-2" src="Fourth.png" alt="Criança">
     </section>
-    <section class="exams">
+    <section class="exams" id="exams">
         <div class="text-2">
         <h2>Exames</h2>
         <h3>Exames de Endoscopia Digestiva Alta e Colonoscopia em adulto e crianças para avaliar:</h3>
@@ -124,7 +125,7 @@
         </div>
         <img class="child-3" src="Fifth.png" alt="Criança">
     </section>
-    <section class="blog">
+    <section class="blog" id="blog">
         <div class="card-1-container">
         <img class="child-4" src="Sixty.png" alt="Criança">
         <div class="card-1">
@@ -144,7 +145,7 @@
         </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="contact-text-1">
         <h2>CONTATO</h2>
         <div class="whatsapp-contact">
