--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <img src="Logo.png" alt="Logo">
         </div>
         <div class="nav-links">
-                <a href="#hero">INÍCIO</a>
-                <a href="#specialty">QUEM EU SOU</a>
-                <a href="#services">SERVIÇOS</a>
-                <a href="#exams">EXAMES</a>
-                <a href="#blog">BLOG</a>
-                <a href="#contact">CONTATO</a>
+                <a href="#hero">Início</a>
+                <a href="#specialty">Quem eu sou</a>
+                <a href="#services">Serviços</a>
+                <a href="#exams">Exames</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact">Contato</a>
         </div>
         <div class="icons">
         <a href="https://www.instagram.com/lidianegastropediatra?igsh=MTR4ZzhtNm8xN2NoYQ%3D%3D&utm_source=qr" target="_blank" rel="noopener noreferrer">
@@ -166,32 +166,32 @@
         </div>
         <div class="adress-contact">
         <div class="santos">
-        <p>AV.SANTOS DUMONT, 1510-SALA 409</p>
+        <p>Clínica NeoNatus</p>
         </div>
         <div class="adress">
-        <p>(esquina com Rua Carlos Vasconcelos) - Edifício Manhattan Square Garden</p>
+        <p>Av Washington Soares, 3663</p>
         </div>
         <div class="aldeota">
-        <p>ALDEOTA-FORTALEZA/CE</p>
+        <p>WSTC, Sala 608</p>
         </div>
         </div>
         </div>
         <div class="clinic-images">
         <div class="clinic-images-1">
-        <img src="Niny.png" alt="Clínica">
-        <img src="Tenthy.png" alt="Clínica">
+        <img src="Clinica-1.png" alt="Clínica">
+        <img src="Clinica-2.png" alt="Clínica">
         </div>
         <div class="clinic-images-2">
-        <img src="Elevnthy.png" alt="Clínica">
-        <img src="Twelve.png" alt="Clínica">
+        <img src="Clinica-3.png" alt="Clínica">
+        <img src="Clinica-4.png" alt="Clínica">
         </div>
         </div>
     </section>
     <footer class="end">
-        <a href="https://www.google.com/maps/place/Manhattan+Square+Garden/@-3.7327113,-38.5104885,17z/data=!3m1!4b1!4m6!3m5!1s0x7c7485ec14d7791:0xe0279af6a0507e9!8m2!3d-3.7327113!4d-38.5104885!16s%2Fg%2F11bw2_h04b?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D" 
+        <a href="https://maps.google.com/maps/place//data=!4m2!3m1!1s0x8a41084e8d80b94d:0xd1048bd4627ebd05?entry=s&sa=X&ved=1t:8290&hl=pt-br&ictx=111 " 
                target="_blank" 
                rel="noopener noreferrer">
-        <img class="map" src="Map.png" alt="Mapa">
+        <img class="map" src="Map-2.png" alt="Mapa">
         </a>
         <p>Gastropediatria e Endoscopia Digestiva</p>
         <div class="adress-2">
