--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="Logo.png" type="image/x-icon">
-    <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
-    <title>Dra Lidiane</title>
+    <link rel="icon" href="Logo-icon 1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Logo-icon 1.png" type="image/x-icon">
+    <title>Dra Lidiane Landim</title>
 </head>
 <body>
     <section class="nav-bar">
