--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="nav-bar">
         <div class="logo">
-        <img src="Logo.png" alt="Logo">
+        <img src="Logo-2.png" alt="Logo">
         </div>
         <div class="nav-links">
                 <a href="#hero">Início</a>
@@ -41,7 +41,7 @@
         <p>A Dra. Lidiane Landim é uma especialista em
             gastropediatria e Endoscopia digestiva(adulto
             e criança), formada nas principais escolas
-            médicas do país como USP e UNICAMP.
+            médicas do país como USP e UNICAMP. Atua como Professora da Unichristus e da Universidade Federal do Ceará (UFC), com mestrado e doutorado pela Unicamp.
         </p>
         <a href="https://wa.me/message/CDM4GY5YCUKUA1" target="_blank" rel="noopener noreferrer"><p>AGENDE SUA CONSULTA</p> <i class="fa-brands fa-whatsapp" alt="Whatsapp"></i></a>
         </div>
