--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>Diagnosticar precocemente o câncer intestinal;</li>
             <li>Prevenir ou diagnosticar doenças como úlceras, diverticulite, entre outras;</li>
         </ul>
+        <a href="https://wa.me/message/CDM4GY5YCUKUA1" target="_blank" rel="noopener noreferrer"><p>AGENDE SUA CONSULTA</p> <i class="fa-brands fa-whatsapp" alt="Whatsapp"></i></a>
         </div>
         <img class="child-3" src="Fifth.png" alt="Criança">
     </section>
