--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="card-1-container">
         <img class="child-4" src="Sixty.png" alt="Criança">
         <div class="card-1">
-            <a href="blog.html" target="_blank" rel="noopener noreferrer"><p>LEIA O ARTIGO</p><img class="arrow-1" src="Vector.svg" alt="Arrow"></a>
+            <a href="C:\Users\lucas\OneDrive\Documentos\GitHub\Dra-Lidiane-b2.0\Distúrbios respiratórios do RN .pdf" target="_blank" rel="noopener noreferrer"><p>AULA-1</p><img class="arrow-1" src="Vector.svg" alt="Arrow"></a>
         </div>
         </div>
         <div class="card-2-container">
         <img class="child-5" src="Seventhy.png" alt="Criança">
         <div class="card-2">
-        <a href="blog.html" target="_blank" rel="noopener noreferrer"><p>LEIA O ARTIGO</p><img class="arrow-2" src="Vector.svg" alt="Arrow"></a>
+        <a href="C:\Users\lucas\OneDrive\Documentos\GitHub\Dra-Lidiane-b2.0\Icterícia neonatal.pdf" target="_blank" rel="noopener noreferrer"><p>AULA-2</p><img class="arrow-2" src="Vector.svg" alt="Arrow"></a>
         </div>
         </div>
         <div class="card-3-container">
         <img class="child-6" src="Eighty.png" alt="Criança">
         <div class="card-3">
-            <a href="blog.html" target="_blank" rel="noopener noreferrer"><p>LEIA O ARTIGO</p><img class="arrow-3" src="Vector.svg" alt="Arrow"></a>
+            <a href="blog.html" target="_blank" rel="noopener noreferrer"><p>AULA-3</p><img class="arrow-3" src="Vector.svg" alt="Arrow"></a>
         </div>
         </div>
     </section>
